[tool.poetry]
name = "ml-weight-fraction"
version = "0.1.0"
description = "Test several machine learning models to predict the weight fraction of a chemical in a consumer product."
authors = ["B. Lila Thornton <lila.thornton@gmail.com>"]
packages = [ { include = "*.py" } ]

[tool.poetry.dependencies]
python = "~3.7.3"
pandas = "^1.0.1"
numpy = "^1.18.1"
scipy = "^1.4.1"
matplotlib = "^3.1.3"
scikit-learn = "^0.22.1"
jupyterlab = "^3.0.0"
plotly = "^4.10.0"
dask = ">=2021.6.0"
distributed = ">=2021.6.0"
squarify = "^0.4.3"

[tool.poetry.dev-dependencies]
nb_black = "^1.0.7"
black = ">=19.10b0"
jupyterlab_execute_time = "^2.0.2"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
